    \itemize{
      \item \code{txtProgressBar()} can write to an open connection
      instead of the console.

      \item \code{rstandard.glm} gains a \code{type} argument for optional 
      standardized Pearson residuals.

      \item Non-portable package names ending in \file{.} are no longer
      allowed.  Nor are single-character package names (\pkg{R} was
      already disallowed).

      Provided at least one graphics device is selected for a chunk, the
      first graphics device is used for the main evaluation of the
      chunk.  This means that by default when re-building vignettes each
      chunk is evaluated once and no \file{Rplots.pdf} file is produced.

      User-defined numeric (with names starting \code{n_}) and character
      (starting \code{ch_}) options are now allowed: as before all other
      unknown options are taken to be logical.
      
      \item \code{regexpr()} and \code{gregexpr()} with \code{perl =
	TRUE} allows Python-style named captures.  (Wish and
      contribution of \PR{14518}.)

      \item The placement of plotmath text in the margins now makes the
      same vertical adjustment as ordinary text, so using ordinary and
      plotmath on the same margin line will seem better aligned (but not
      exactly aligned, since ordinary text has descenders below the
      baseline and plotmath places them on the baseline).  (Related to
      \PR{14537}.)
    }
  }
  
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Function \code{R_tmpnam2} has been added to the API to allow
      a temporary filename to include a specified extension.
    }
  }
  
  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.
    }
  }